api(css): fix the three-column wrap

--- a/public/resources/css/module/_api.scss
+++ b/public/resources/css/module/_api.scss
@@ -92,6 +92,7 @@ input.api-filter {
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      box-sizing: border-box;
       a {
         text-decoration: none;
         color: black;
